Fix text align

--- a/app/assets/stylesheets/playlist-detail.css
+++ b/app/assets/stylesheets/playlist-detail.css
@@ -139,6 +139,7 @@
 #playlist-title {
   font-size: 24px;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 #playlist-info {
